View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0028978 | Open CASCADE | OCCT:Coding | public | 2017-08-07 17:45 | 2017-10-23 09:09 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | integration request | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.1.0 | ||||
Target Version | 7.2.0 | Fixed in Version | 7.2.0 | ||
Summary | 0028978: Coding rules - suppress GCC compiler warnings -Warray-bounds within NCollection_Array1 | ||||
Description | The GCC 6.3.0 -Warray-bounds warnings for NCollection_Array1 constructor are misleading and should be suppressed./occt.git/inc/../src/NCollection/NCollection_Array1.hxx|215|warning: array subscript is below array bounds [-Warray-bounds]| The warnings are emitted for a code initializing NCollection_Array1 from a local array with an lower index 1+, so that (Start-1) points out of local array range - but it is expected, since NCollection_Array1 stores pointer with this shift intentionally (to avoid shift within method accessing each element). Standard_Real knot_array[2] ; TColStd_Array1OfReal the_knots(knot_array[0],1,2), | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | Not required | ||||
|
Branch CR28978 has been created by kgv. SHA-1: 11c9475f3e4805752d176d3b8ea85e50f25725ad Detailed log of new commits: Author: kgv Date: Mon Aug 7 18:04:33 2017 +0300 0028978: Coding rules - suppress GCC compiler warnings -Warray-bounds within NCollection_Array1 |
|
Please take the patch. http://jenkins-test-10.nnov.opencascade.com/view/CR28978-master-KGV/view/OCCT%20compile/ |
|
Combination - OCCT branch : CR28978 : SHA1 - 11c9475f3e4805752d176d3b8ea85e50f25725ad Products branch : master was compiled on Linux, MacOS and Windows platforms. Number of compiler warnings: OCCT : Linux: 0 (0 on master) Windows: 0 (0 on master) MacOS : 0 (0 on master) Products : Linux: 5 (5 on master) Windows: 0 (0 on master) MacOS : 0 (0 on master) |
|
Branch CR28978 has been deleted by kgv. SHA-1: 11c9475f3e4805752d176d3b8ea85e50f25725ad |
Date Modified | Username | Field | Change |
---|---|---|---|
2017-08-07 17:45 | kgv | New Issue | |
2017-08-07 17:45 | kgv | Assigned To | => kgv |
2017-08-07 17:47 | kgv | Description Updated | |
2017-08-07 18:04 | kgv | Description Updated | |
2017-08-07 18:06 | git | Note Added: 0069176 | |
2017-08-07 19:44 | kgv | Note Added: 0069185 | |
2017-08-07 19:44 | kgv | Assigned To | kgv => bugmaster |
2017-08-07 19:44 | kgv | Status | new => resolved |
2017-08-07 19:44 | kgv | Status | resolved => reviewed |
2017-08-07 21:38 | kgv | Relationship added | related to 0028980 |
2017-08-08 16:11 | bugmaster | Test case number | => Not required |
2017-08-08 16:13 | bugmaster | Note Added: 0069212 | |
2017-08-08 16:13 | bugmaster | Status | reviewed => tested |
2017-08-11 07:52 | bugmaster | Changeset attached | => occt master fdb8a039 |
2017-08-11 07:52 | bugmaster | Status | tested => verified |
2017-08-11 07:52 | bugmaster | Resolution | open => fixed |
2017-08-18 17:00 | git | Note Added: 0069652 | |
2017-09-29 16:17 |
|
Fixed in Version | => 7.2.0 |
2017-09-29 16:29 |
|
Status | verified => closed |
2017-10-23 09:09 | abv | Relationship added | has duplicate 0028583 |