0028978: Coding rules - suppress GCC compiler warnings -Warray-bounds within NCollection_Array1